# chatty-lambda

./: .gitignore  .travis.yml  README.md  chatty-lambda.cabal  chatty-lambda.nix  default.nix
app/: Main.hs
src/Chatty/: Lib.hs
test/Chatty/: LibSpec.hs
