name:                chatty-lambda
version:             0.1.0.0
synopsis:            Chat server for chatting with friends
description:         Please see README.md
homepage:            http://github.com/stoltene2/chatty-lambda
license:             BSD3
license-file:        LICENSE
author:              Eric Stolten
maintainer:          stoltene2@gmail.com
copyright:           2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chatty.Lib
  build-depends:       base                >= 4.7     && <5
                     , aeson               >= 0.8.0   && <0.11
                     , async               >= 2.0     && <2.1
                     , classy-prelude      >= 0.12    && <0.13
                     , network             >= 2.3     && <2.7
                     , servant             >= 0.4.4.0 && <0.4.5.0
                     , stm                 >= 2.4.2   && <2.5
                     , text                >= 1.2.1.0 && <1.2.2.0
                     , time

  default-extensions: OverloadedStrings
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      TypeFamilies
                      GADTs
                      GeneralizedNewtypeDeriving
                      FlexibleContexts
                      EmptyDataDecls
                      NoMonomorphismRestriction
                      DeriveDataTypeable
                      ViewPatterns
                      RecordWildCards

  default-language:    Haskell2010

executable chatty-lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions: OverloadedStrings
                      NoImplicitPrelude

  build-depends:       base
                     , chatty-lambda
                     , classy-prelude      >= 0.12    && <0.13
  default-language:    Haskell2010

test-suite chatty-lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , chatty-lambda
                     , classy-prelude      >= 0.12    && <0.13
                     , hspec >= 2.1.7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stoltene2/chatty-lambda
